--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -3,16 +3,29 @@
 $font-family-base: 'Raleway', sans-serif;
 
 // Import bootstrap and fontawesome
+@import "custom-variables";
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "../../bower_components/fontawesome/scss/font-awesome";
 
-// Bootstrap Starter Template Styles
-body {
+// Brand colors
+$light-gray: #E5E5E5 !default;
+$white: #fff !default;
 
+
+.menu-item{
+  //padding-right: 20px;
 }
-.starter-template {
-  padding: 40px 15px;
-  text-align: right;
+
+.column{
+  //background: $white;
+  //padding: 5px;
+  //margin-top: 30px;
+  //margin-right: 15px;
+  //margin-left: 15px;
+}
+
+.content-container {
+  //background: $light-gray;
 }
 
 #wrapper {
@@ -35,7 +48,7 @@ body {
   height: 100%;
   margin-left: -250px;
   overflow-y: auto;
-  background: #000;
+  background: $gray-darker;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -65,17 +78,19 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+
 }
 
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
+
 }
 
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  color: #999999;
+  color: #fff;
 }
 
 .sidebar-nav li a:hover {
@@ -90,27 +105,27 @@ body {
 }
 
 .sidebar-nav > .sidebar-brand {
+  text-indent: 40px;
   height: 65px;
   font-size: 18px;
   line-height: 60px;
+  color: #fff;
 }
 
-.sidebar-nav > .sidebar-brand a {
-  color: #999999;
-}
 
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
   background: none;
 }
 
-@media(min-width:768px) {
+@media(min-width:1200px) {
   #wrapper {
     padding-left: 250px;
   }
 
   #wrapper.toggled {
     padding-left: 0;
+
   }
 
   #sidebar-wrapper {
