--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7696,3 +7696,5 @@ button.close {
   #wrapper.toggled #page-content-wrapper {
     position: relative;
     margin-right: 0; } }
+
+/*# sourceMappingURL=style.css.map */
