--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -9,18 +9,18 @@
 }
 
 #wrapper.toggled {
-  padding-left: 250px;
+  padding-left: 320px;
 }
 
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
-  left: 250px;
+  left: 320px;
   width: 0;
   height: 100%;
-  margin-left: -250px;
+  margin-left: -320px;
   overflow-y: auto;
-  background: $gray-darker;
+  background: $gray-dark;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -28,7 +28,7 @@
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  width: 250px;
+  width: 320px;
 }
 
 #page-content-wrapper {
@@ -38,61 +38,52 @@
 
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  margin-right: -250px;
+
 }
 
 /* Sidebar Styles */
-
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-
+.list-group {
+  //height: 80px;
+  //font-family: Foundry Context;
+  //font-size: 24px;
+  //font-weight: bold;
+  //font-style: normal;
+  //font-stretch: normal;
+  //text-align: left;
+  //color: #ffffff;
 }
 
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-
+.list-group-item {
+  background-color: $gray-dark;
+  border: none;
+  width: 320px;
+  height: 55px;
 }
 
-.sidebar-nav li a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
+a.list-group-item {
+  color: #e5e5e5;
+  font-size:20px;
+  line-height: 0.56;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: left;
 }
 
-.sidebar-nav li a:hover {
-  text-decoration: none;
-  color: #fff;
-  background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-  text-indent: 40px;
-  height: 65px;
-  font-size: 18px;
-  line-height: 60px;
-  color: #fff;
-}
-
-
-.sidebar-nav > .sidebar-brand a:hover {
+a.list-group-item:hover {
   color: #fff;
   background: none;
 }
 
+a.list-group-item:active,
+a.list-group-item:focus {
+  text-decoration: none;
+}
+
+
 @media(min-width:1200px) {
   #wrapper {
-    padding-left: 250px;
+    padding-left: 320px;
   }
 
   #wrapper.toggled {
@@ -101,7 +92,7 @@
   }
 
   #sidebar-wrapper {
-    width: 250px;
+    width: 320px;
   }
 
   #wrapper.toggled #sidebar-wrapper {
