--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1056,7 +1056,7 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: Foundry Context;
   font-size: 14px;
   line-height: 1.42857;
   color: #4D4F53;
@@ -5185,7 +5185,7 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Raleway", sans-serif;
+  font-family: Foundry Context;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -5298,7 +5298,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Raleway", sans-serif;
+  font-family: Foundry Context;
   font-style: normal;
   font-weight: normal;
   letter-spacing: normal;
@@ -7627,7 +7627,7 @@ button.close {
   height: 100%;
   margin-left: -320px;
   overflow-y: auto;
-  background: #4D4F53;
+  background: #2c2c2c;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -7643,9 +7643,22 @@ button.close {
 #wrapper.toggled #page-content-wrapper {
   position: absolute; }
 
+.page-header {
+  color: #ffffff;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  height: 17px;
+  width: 229px;
+  line-height: 0.47;
+  border: none;
+  text-align: left;
+  margin: 23px 40px 48px;
+  white-space: nowrap; }
+
 /* Sidebar Styles */
 .list-group-item {
-  background-color: #4D4F53;
+  background-color: #2c2c2c;
   border: none;
   width: 320px;
   height: 55px; }
@@ -7657,7 +7670,8 @@ a.list-group-item {
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
-  text-align: left; }
+  text-align: left;
+  padding-left: 40px; }
 
 a.list-group-item:hover {
   color: #fff;
@@ -7665,7 +7679,9 @@ a.list-group-item:hover {
 
 a.list-group-item:active,
 a.list-group-item:focus {
-  text-decoration: none; }
+  text-decoration: none;
+  background-color: #8B8C8D;
+  color: #ffffff; }
 
 @media (min-width: 1200px) {
   #wrapper {
@@ -7681,6 +7697,11 @@ a.list-group-item:focus {
   #wrapper.toggled #page-content-wrapper {
     position: relative;
     margin-right: 0; } }
+
+.navbar-default {
+  background-color: #ffffff;
+  box-shadow: 0px 2px 2px 0px rgba(2, 2, 2, 0.2);
+  height: 80px; }
 
 .panel {
   margin: 20px 0 0 10px;
