--- a/resources/sass/sidebar.scss
+++ b/resources/sass/sidebar.scss
@@ -20,7 +20,7 @@
   height: 100%;
   margin-left: -320px;
   overflow-y: auto;
-  background: $gray-dark;
+  background: $gray-darker;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -41,20 +41,29 @@
 
 }
 
-/* Sidebar Styles */
-.list-group {
-  //height: 80px;
-  //font-family: Foundry Context;
-  //font-size: 24px;
-  //font-weight: bold;
-  //font-style: normal;
-  //font-stretch: normal;
-  //text-align: left;
-  //color: #ffffff;
+// The custom styling for the header of the sidebar navigation menu
+// Extended from the Bootstrap page-header class
+.page-header {
+  color: $white;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  height: 17px;
+  width: 229px;
+  line-height: 0.47;
+  border: none;
+  text-align: left;
+  margin: 23px 40px 48px;
+  white-space: nowrap;
 }
 
+
+/* Sidebar Styles */
+
+// Extended class from Font Awesome, list-group-item used for
+// a list of items with associated icons in the sidebar navigation
 .list-group-item {
-  background-color: $gray-dark;
+  background-color: $gray-darker;
   border: none;
   width: 320px;
   height: 55px;
@@ -68,6 +77,7 @@ a.list-group-item {
   font-style: normal;
   font-stretch: normal;
   text-align: left;
+  padding-left: 40px;
 }
 
 a.list-group-item:hover {
@@ -78,6 +88,8 @@ a.list-group-item:hover {
 a.list-group-item:active,
 a.list-group-item:focus {
   text-decoration: none;
+  background-color: $gray;
+  color: $white;
 }
 
 
